# ROS-RGBD-image-synchronzer-extractor

./: CMakeLists.txt  README.md  package.xml
include/: RGBDExtractorNode.h
launch/: rgbd_extractor.launch
src/: RGBDExtractorNode.cpp  RGBDExtractor_main.cpp
